Fix thumbnail and text overlap on interactive map info windows

--- a/app/assets/stylesheets/components/_yelp_map.scss
+++ b/app/assets/stylesheets/components/_yelp_map.scss
@@ -100,7 +100,12 @@
 
   .info-photo {
     float: left;
+    margin-right: 10px;
     width: 50px;
+
+    img {
+      max-width: 50px;
+    }
   }
 
   .info-content {
